[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gem-64x64.png" type="Texture" id=1]
[ext_resource path="res://Gem.gd" type="Script" id=2]
[ext_resource path="res://MoveTween.tscn" type="PackedScene" id=3]
[ext_resource path="res://EmptyBox-64x64.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Gem" type="Area2D"]
script = ExtResource( 2 )

[node name="MoveTween" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="Down" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 0, 64 )
collide_with_areas = true

[node name="Up" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( -64, 0 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 64, 0 )

[node name="Gem_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 32, 32 )

[node name="Selected_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
offset = Vector2( 32, 32 )
[connection signal="input_event" from="." to="." method="_on_Gem_input_event"]
